{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 9,
  "lineage": "269da9a8-1125-2781-c475-749c0616cc18",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8000",
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-29T05:16:00.883-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-75f92f7c-c9ed-4db3-9cc/global/firewalls/cloudeco-allow-http",
            "log_config": [],
            "name": "cloudeco-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/global/networks/cloudeco-vpc",
            "priority": 1000,
            "project": "project-75f92f7c-c9ed-4db3-9cc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/global/firewalls/cloudeco-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "cloudeco-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.cloudeco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-04-29T05:15:59.735-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-75f92f7c-c9ed-4db3-9cc/global/firewalls/cloudeco-allow-internal",
            "log_config": [],
            "name": "cloudeco-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/global/networks/cloudeco-vpc",
            "priority": 1000,
            "project": "project-75f92f7c-c9ed-4db3-9cc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/global/firewalls/cloudeco-allow-internal",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.cloudeco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-29T05:15:59.578-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-75f92f7c-c9ed-4db3-9cc/global/firewalls/cloudeco-allow-ssh",
            "log_config": [],
            "name": "cloudeco-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/global/networks/cloudeco-vpc",
            "priority": 1000,
            "project": "project-75f92f7c-c9ed-4db3-9cc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/global/firewalls/cloudeco-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.cloudeco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "master",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260427",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/zones/us-central1-a/disks/cloudeco-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-75f92f7c-c9ed-4db3-9cc/zones/us-central1-a/instances/cloudeco-master",
            "instance_id": "165807670804891768",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-4",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCtqDyI46Ybzg9NrcIZiMu9ufIv3XnKFEtQEDyMqSlZPcGBMznnixUZmtju6OpYgnWrRNBJDu7XBB5U8pLxSuA4giKnl3b/iC2aNgsIWKpMerHr+yR/O1hM+Hpls5dgqVEevU4GRkQbLvxoRx+1eKdA/6MyKkcYZhyKRY1QnWses4C7eTn2PL0r5XtWNJJuWP9k7rvlP4su3c9IWlxCAWfT0h8nyY2JxBBii2cn5Wta/D1RaM0mGjd+43o4Nu+iLdYIFnSD6VPePBqG1NBqgoT1T3jEv3/QaO+pJtl2r/DJLD9rrAx26zqqPCDnxitRv3ZO+Asri9Av+Sns6J6Zpz89sCAnNp4palu5tmpZw6nFng3MaR6yW1PZPRX9gQ8HH+eVv2WKBQwrfEglN8sKLclHL2h3FvpwAIhZEw2WzSZyDU [...]
            },
            "metadata_fingerprint": "WshBYAZvIKU=",
            "name": "cloudeco-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.134.28.253",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/global/networks/cloudeco-vpc",
                "network_ip": "10.0.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/regions/us-central1/subnetworks/cloudeco-subnet",
                "subnetwork_project": "project-75f92f7c-c9ed-4db3-9cc"
              }
            ],
            "project": "project-75f92f7c-c9ed-4db3-9cc",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/zones/us-central1-a/instances/cloudeco-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "cloudeco-node"
            ],
            "tags_fingerprint": "EIWDiAldQgo=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.cloudeco_vpc",
            "google_compute_subnetwork.cloudeco_subnet"
          ]
        },
        {
          "index_key": "worker1",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260427",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/zones/us-central1-a/disks/cloudeco-worker1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-75f92f7c-c9ed-4db3-9cc/zones/us-central1-a/instances/cloudeco-worker1",
            "instance_id": "7026859648030099577",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-4",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCtqDyI46Ybzg9NrcIZiMu9ufIv3XnKFEtQEDyMqSlZPcGBMznnixUZmtju6OpYgnWrRNBJDu7XBB5U8pLxSuA4giKnl3b/iC2aNgsIWKpMerHr+yR/O1hM+Hpls5dgqVEevU4GRkQbLvxoRx+1eKdA/6MyKkcYZhyKRY1QnWses4C7eTn2PL0r5XtWNJJuWP9k7rvlP4su3c9IWlxCAWfT0h8nyY2JxBBii2cn5Wta/D1RaM0mGjd+43o4Nu+iLdYIFnSD6VPePBqG1NBqgoT1T3jEv3/QaO+pJtl2r/DJLD9rrAx26zqqPCDnxitRv3ZO+Asri9Av+Sns6J6Zpz89sCAnNp4palu5tmpZw6nFng3MaR6yW1PZPRX9gQ8HH+eVv2WKBQwrfEglN8sKLclHL2h3FvpwAIhZEw2WzSZyDU [...]
            },
            "metadata_fingerprint": "WshBYAZvIKU=",
            "name": "cloudeco-worker1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.223.85.181",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/global/networks/cloudeco-vpc",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/regions/us-central1/subnetworks/cloudeco-subnet",
                "subnetwork_project": "project-75f92f7c-c9ed-4db3-9cc"
              }
            ],
            "project": "project-75f92f7c-c9ed-4db3-9cc",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/zones/us-central1-a/instances/cloudeco-worker1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "cloudeco-node"
            ],
            "tags_fingerprint": "EIWDiAldQgo=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.cloudeco_vpc",
            "google_compute_subnetwork.cloudeco_subnet"
          ]
        },
        {
          "index_key": "worker2",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260427",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/zones/us-central1-a/disks/cloudeco-worker2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-75f92f7c-c9ed-4db3-9cc/zones/us-central1-a/instances/cloudeco-worker2",
            "instance_id": "3449080782983547002",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-4",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCtqDyI46Ybzg9NrcIZiMu9ufIv3XnKFEtQEDyMqSlZPcGBMznnixUZmtju6OpYgnWrRNBJDu7XBB5U8pLxSuA4giKnl3b/iC2aNgsIWKpMerHr+yR/O1hM+Hpls5dgqVEevU4GRkQbLvxoRx+1eKdA/6MyKkcYZhyKRY1QnWses4C7eTn2PL0r5XtWNJJuWP9k7rvlP4su3c9IWlxCAWfT0h8nyY2JxBBii2cn5Wta/D1RaM0mGjd+43o4Nu+iLdYIFnSD6VPePBqG1NBqgoT1T3jEv3/QaO+pJtl2r/DJLD9rrAx26zqqPCDnxitRv3ZO+Asri9Av+Sns6J6Zpz89sCAnNp4palu5tmpZw6nFng3MaR6yW1PZPRX9gQ8HH+eVv2WKBQwrfEglN8sKLclHL2h3FvpwAIhZEw2WzSZyDU [...]
            },
            "metadata_fingerprint": "WshBYAZvIKU=",
            "name": "cloudeco-worker2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "23.236.52.154",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/global/networks/cloudeco-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/regions/us-central1/subnetworks/cloudeco-subnet",
                "subnetwork_project": "project-75f92f7c-c9ed-4db3-9cc"
              }
            ],
            "project": "project-75f92f7c-c9ed-4db3-9cc",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/zones/us-central1-a/instances/cloudeco-worker2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "cloudeco-node"
            ],
            "tags_fingerprint": "EIWDiAldQgo=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.cloudeco_vpc",
            "google_compute_subnetwork.cloudeco_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "cloudeco_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-75f92f7c-c9ed-4db3-9cc/global/networks/cloudeco-vpc",
            "mtu": 0,
            "name": "cloudeco-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6579117768507672711",
            "project": "project-75f92f7c-c9ed-4db3-9cc",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/global/networks/cloudeco-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "cloudeco_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-04-29T05:16:02.132-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/project-75f92f7c-c9ed-4db3-9cc/regions/us-central1/subnetworks/cloudeco-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "cloudeco-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/global/networks/cloudeco-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-75f92f7c-c9ed-4db3-9cc",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-75f92f7c-c9ed-4db3-9cc/regions/us-central1/subnetworks/cloudeco-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.cloudeco_vpc"
          ]
        }
      ]
    }
  ]
}